tests/paczka1/fuzzy1/38296647.err
Error in line 1: mAAvcFs S661 23,1
Error in line 9: WWXCPM A609 26,9
Error in line 2: A324 A324 86,7
Error in line 24: kMt A324 148,9
Error in line 29: WWXCPM A324 56,0
Error in line 37: mAAvcFs A609 43,2
